fix(docker): resolve Docker build and action version issues
Dockerfile improvements:
- Add missing frontend package.json directory in workspace setup
- Add --verbose flag to npm ci for better error debugging
- Ensure all workspace packages are available during npm install

GitHub Actions fixes:
- Revert docker actions from v4 to stable v3 versions
- docker/setup-qemu-action@v4 -> v3
- docker/setup-buildx-action@v4 -> v3
- docker/login-action@v4 -> v3

Fixes:
- npm ci workspace installation failures
- GitHub Actions 'package version not found' errors

--- a/packages/backend/Dockerfile
+++ b/packages/backend/Dockerfile
@@ -13,17 +13,21 @@ RUN npm install -g turbo
 COPY package*.json ./
 COPY turbo.json ./
 COPY tsconfig.base.json ./
+
+# Create packages directories and copy package.json files
+RUN mkdir -p packages/backend packages/shared packages/frontend
 COPY packages/backend/package.json ./packages/backend/
 COPY packages/shared/package.json ./packages/shared/
+COPY packages/frontend/package.json ./packages/frontend/
 
-# Install dependencies with workspace support
-RUN npm ci --workspaces --include-workspace-root --omit=dev && npm cache clean --force
+# Install dependencies with better error handling
+RUN npm ci --workspaces --include-workspace-root --omit=dev --verbose && npm cache clean --force
 
 # Builder stage
 FROM base AS builder
 
 # Install all dependencies (including dev) for building
-RUN npm ci --workspaces --include-workspace-root
+RUN npm ci --workspaces --include-workspace-root --verbose
 
 # Copy source code
 COPY packages/backend ./packages/backend
@@ -50,11 +54,15 @@ WORKDIR /app
 # Copy package files and install production dependencies
 COPY package*.json ./
 COPY turbo.json ./
+
+# Create packages directories and copy package.json files
+RUN mkdir -p packages/backend packages/shared packages/frontend
 COPY packages/backend/package.json ./packages/backend/
 COPY packages/shared/package.json ./packages/shared/
+COPY packages/frontend/package.json ./packages/frontend/
 
 # Install production dependencies only
-RUN npm ci --workspaces --include-workspace-root --omit=dev && npm cache clean --force
+RUN npm ci --workspaces --include-workspace-root --omit=dev --verbose && npm cache clean --force
 
 # Copy built application
 COPY --from=builder --chown=nodejs:nodejs /app/packages/backend/dist ./packages/backend/dist
