--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,7 +2,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, fix/* ]
   pull_request:
     branches: [ main ]
     types: [opened, synchronize, reopened]
