--- a/.github/workflows/werewolf-ci.yml
+++ b/.github/workflows/werewolf-ci.yml
@@ -2,7 +2,7 @@ name: 🐺 Werewolf Game CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, fix/* ]
   pull_request:
     branches: [ main, develop ]
   workflow_dispatch:
